--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,4 +1,8 @@
 // COLORS
+$primary-color: #3F3D56;
+$title-color: #1A1A1C;
+$text-color: rgb(62, 62, 75);
+
 // shades of gray
 $gray-lighter: #f8f8f8;
 $gray-light: #d8d8d8;
