--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,23 @@
-body {
+@import '../src/styles/theme';
+
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: rgb(246, 246, 246);
+  -webkit-font-smoothing: antialiased;
+  color: $text-color;
+}
+
+body, input, button {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: $title-color;
+  font-family: Ubuntu;
 }
