styles in progress

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -10,8 +10,9 @@ $gray: #bebebe;
 $gray-dark: #808080;
 $gray-darker: #686868;
 
-$primary-color: #340068;
-$accent-color: #FF6978;
+$green-color: #61C7A9;
+
+$accent-color: #3F3D56;
 
 // BORDERS
 $light-round: 4px;
