--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -4,17 +4,18 @@
   height: 32px;
   padding: 0px 16px;
   font-size: $font-label;
-  font-weight: bold;
-  color: white;
-  background-color: $accent-color;
-  border: 2px solid white;
+  font-weight: 400;
+  font-family: Ubuntu;
+  color: $text-color;
+  background-color: #fff;
+  border: 1px solid $green-color;
   border-radius: $extreme-round;
   outline: none;
   cursor: pointer;
 
   &:hover {
-    background-color: white;
-    color: $accent-color;
+    background-color: $text-color;
+    color: #fff;
   }
 
   &.modal-close-button {
