--- a/src/components/Filter/styles.scss
+++ b/src/components/Filter/styles.scss
@@ -5,32 +5,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 290px;
-  margin: 16px 0;
-}
-
-.header-search-type {
-  display: flex;
-  width: 100%;
-  height: 32px;
-
-  .header-search-type-button {
-    flex: 1;
-    padding: 8px 0 28px;
-    border-radius: $extreme-round $extreme-round 0px 0px;
-    text-align: center;
-    cursor: pointer;
-    border-top: 3px solid $gray-lighter;
-
-    &.selected {
-      background-color: $accent-color;
-      color: white;
-    }
-
-    .header-search-type-button-text.active{
-      text-decoration: $primary-color underline;
-    }
-  }
+  height: 250px;
+  margin: 50px 0 40px 0;
+  box-shadow: 2px 2px 32px -3px rgba(63,61,86,1);
 }
 
 .filterbar-container {
@@ -39,21 +16,20 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  border-radius: 0px 0px $extreme-round $extreme-round;
-  padding-bottom: 16px;
-  background-color: $accent-color;
+  border-radius: 3px;
+  background-color: $green-color;
   color: white;
+  
 
   .filterbar-title {
-    margin: 48px 0;
+    margin: 40px 0;
+    font-family: Ubuntu;
+    font-size: 33px;
+    font-weight: 500;
   }
 
-  .filter-bar-container{
+  .filterbar-content{
     width: 70%;
-    margin-bottom: 56px;
+    margin-bottom: 40px;
   }
-}
-
-.powerstats-filter-container {
-  width: 100%;
 }
