--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,17 +2,23 @@
 
 .header {
   width: 100%;
-  height: 50px;
-  background-color: #2E2E41;
-  // background-color: $accent-color;
+  height: 60px;
+  // background-color: $green-color;
+  background-color: $text-color;
 
   .header-logo {
     display: flex;
     align-items: center;
     height: 100%;
-    margin-left: 16px;
-    color: white;
-    cursor: default;
-    font-size: $font-h1;
+    margin-left: 50px;
+    color: #fff;
+    font-weight: 700;
+    font-family: Ubuntu;
+    font-size: 27px;
   }
+
+  a {
+    text-decoration: none;
+  }
+
 }
