--- a/src/components/SearchBar/styles.scss
+++ b/src/components/SearchBar/styles.scss
@@ -4,8 +4,10 @@
   width: 100%;
   height: 32px;
   border: 1px solid $gray-light;
-  border-radius: 4px;
+  border-radius: $hard-round;
   box-sizing: border-box;
-  font-size: $font-label;
+  font-size: $font-p;
+  color: $title-color ;
+  padding-left: 10px;
   outline: none;
 }
