--- a/src/components/HeroModal/styles.scss
+++ b/src/components/HeroModal/styles.scss
@@ -4,10 +4,9 @@
   }
 
   .modal-hero-image {
-    padding-top: 16px;
-    height: 200px;
+    height: 240px;
     text-align: center;
-    margin: 0 auto;
+    margin: 20px auto;
   }
 
   .modal-hero-info {
@@ -20,14 +19,4 @@
       text-transform: capitalize;
     }
   }
-}
-
-.modal-overlay {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.25);
 }
