--- a/src/components/HeroesList/styles.scss
+++ b/src/components/HeroesList/styles.scss
@@ -8,22 +8,22 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    height: calc(50vh - 32px);
+    height: calc(50vh - 33px);
     overflow-y: scroll;
 
     .hero-li {
-      height: 32px;
+      height: 42px;
       width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       border: 1px solid $gray;
-      border-radius: 4px;
-      margin-bottom: 4px;
-      overflow: hidden;
-      padding: 0 8px;
+      border-radius: $light-round;
+      margin-bottom: 5px;
       cursor: pointer;
       box-sizing: border-box;
+      font-size: 16px;
+      font-family: Ubuntu;
     }
   }
 }
