--- a/src/components/MainModal/styles.scss
+++ b/src/components/MainModal/styles.scss
@@ -6,24 +6,35 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  width: 600px;
+  width: 550px;
   max-width: 80%;
-  height: 400px;
-  max-height: 80%;
+  height: 500px;
+  max-height: 100%;
   z-index: 1010;
   overflow: hidden;
   border-radius: $hard-round;
 
   .modal-top-bar {
-    background-color: $accent-color;
-    padding-bottom: 8px;
+    background-color: $text-color;
+    padding-bottom: 7px;
   }
 
   .modal-content {
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 450px;
     max-height: 100%;
     overflow: scroll;
+    box-sizing: border-box;
   }
+}
+
+.modal-overlay {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.45);
 }
