--- a/src/components/HeroesList/styles.scss
+++ b/src/components/HeroesList/styles.scss
@@ -1,29 +1,33 @@
-@import '../../styles/_theme.scss';
+// @import '../../styles/_theme.scss';
 
-.hero-list-container {
-  width: 70%;
-  margin: 16px 0;
+// .hero-list-container {
+//   width: 100%;
+//   margin: 16px 0;
 
-  .hero-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    height: calc(50vh - 33px);
-    overflow-y: scroll;
+//   .hero-list {
+//     list-style: none;
+//     margin: 0;
+//     padding: 0;
+//     height: calc(50vh - 33px);
+//     overflow-y: scroll;
 
-    .hero-li {
-      height: 42px;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid $gray;
-      border-radius: $light-round;
-      margin-bottom: 5px;
-      cursor: pointer;
-      box-sizing: border-box;
-      font-size: 16px;
-      font-family: Ubuntu;
-    }
-  }
+//     .hero-li {
+//       height: 42px;
+//       width: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       border: 1px solid $gray;
+//       border-radius: $light-round;
+//       margin-bottom: 5px;
+//       cursor: pointer;
+//       box-sizing: border-box;
+//       font-size: 16px;
+//       font-family: Ubuntu;
+//     }
+//   }
+// }
+
+.CardColumn {
+  column-count: 5 !important;
 }
