--- a/src/pages/AllHeroes/styles.scss
+++ b/src/pages/AllHeroes/styles.scss
@@ -1,4 +1,4 @@
-// @import '../../../styles/_theme.scss'
+
 
 .container {
   min-height: 100vh;
@@ -6,7 +6,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-
+  max-width: 100% !important;
+  padding: 0 !important;
   .content {
    display: flex;
    align-items: center;
@@ -15,14 +16,3 @@
    width: 80%;
   }
 }
-
-// @media (min-width: $screen-width-md) {
-//   .container {
-//     display: flex;
-//     align-items: center;
-//   }
-
-//   .content {
-//     width: $content-width-md;
-//   }
-// }
