--- a/src/components/organisms/HeroModal/styles.scss
+++ b/src/components/organisms/HeroModal/styles.scss
@@ -14,5 +14,9 @@
     width: 300px;
     max-width: 80%;
     height: 100%;
+
+    .modal-hero-stat-name {
+      text-transform: capitalize;
+    }
   }
 }
